Implement GetHistoryList and GetHistory handler and swagger
Should to fix GetHistroy could not identify whether there is this customer exist
